# spotify-img-search

./: .env.example  .gitignore  Cargo.toml  README.md  app.py  example.env  pyproject.toml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
spotify-api/: Cargo.toml
spotify-api/src/: lib.rs
src/: main.rs
templates/: index.html
