[package]
name = "spotify-img-search"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/AntoniosBarotsis/spotify-img-search"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
dotenvy = "0.15.7"
rspotify = "0.15.0"
